Fixed text-alignment on mobile

--- a/src/client/scss/item-list.scss
+++ b/src/client/scss/item-list.scss
@@ -27,6 +27,7 @@
 				}
 				@media #{$mobile-only} {
 					flex-direction: column;
+					text-align: center;
 				}
 			}
 		}
